fpstudy: Save pattern1 capture as baseline for Elan 80SG
The Elan evaluation tool needs the calibration sample provided
as pattern1. Their library is designed to capture this calibration
sample upon FPMCU startup, when presumably no finger is on sensor,
and stores this sample for the duration that the FPMCU is powered
on. Any time you request the pattern1, it will provide this cached
result.

Given this, we could ask for the pattern1 sample at any point, but there
are a few constraints that led to this frequency and timing for pattern1
fetching/saving.

1. Collections can be interrupted and resumed at any point, for a
   host of reasons. This may introduce a reboot, which causes the
   a new calibration / pattern1 to be taken. The easiest way to ensure
   that we are using the correct calibration sample for the collected
   finger is to always request the calibration/pattern1 sample from
   the FPMCU at the start of a finger collection.
   - The collection resumes the next day, but the Chromebook was
     shutdown overnight.
   - The Chromebook battery could die.
   - A participant may have enrolled the wrong finger and the operator
     needs to halt the collection and fix the setup. This may introduce
     a reboot.
   - The FPMCU crashes and reboots.

2. The FPC library actually takes pattern0 and pattern1 captures upon
   request. To accommodate taking these captures when no finger is on
   the sensor, we need to fetch them when the user isn't expected to be
   touching the sensor. For this reason, we block the kickoff step
   while we capture the sample and only allow the user to click the OK
   button when we are finished.

BUG=b:329802871
TEST=./host-run.sh
     # Walked through steps.

Change-Id: Ia368bea03098ef43735af59c2ebcfb1adeade8e8
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5399650
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Tested-by: Craig Hesling <hesling@chromium.org>
Commit-Queue: Craig Hesling <hesling@chr

--- a/biod/study/html/index.html
+++ b/biod/study/html/index.html
@@ -78,12 +78,15 @@
     </div>
 
     <!-- Screen 3 - User kicks off enrollment image capture for finger X -->
+    <!-- We block the user from clicking OK, until the server finishes setup
+          for the given finger. -->
     <div id="kickoff" hidden>
       <h1>Capture enrollment image for finger
         <span id="fingerid0">0</span> for participant <span id="pid0">000</span>
       </h1>
       <h1> Click OK to start the capture </h1>
       <button id="kickoff_finger">OK</button>
+      <div id="kickoff-server-state" class="text-footer-status text-danger"></div>
     </div>
 
     <!-- Screen 4 - User is asked to place finger on sensor to capture image.
@@ -151,6 +154,9 @@
   // The finger ID to capture, this is specified by the operator.
   var finger_id = 0;
 
+  // Indicates if the kickoff is waiting for server setup.
+  var is_kickoff_waiting = false;
+
   // Indicate which phase the UI is currently in. Backend is not aware of this
   // and will get the same request.
   var in_enroll_phase = true;
@@ -200,8 +206,29 @@
     socket.send(JSON.stringify(payload));
   }
 
+  // Send message to server that we are about to start capturing for the given
+  // finger. This is intended to be used for setup/initialization and
+  // capturing calibration samples while the participant isn't touching the
+  // sensor.
+  function sendFingerSetupInfo() {
+    var msg = {
+      'action': 'setup',
+      'participant': pid,
+      'group': group,
+      'finger': finger_id,
+    };
+    socket.send(JSON.stringify(msg));
+  }
+
+  // Send message to server to capture a sample.
   function sendNextFingerInfo() {
-    var msg = {'participant': pid, 'group': group, 'finger': finger_id, 'picture': picture_num};
+    var msg = {
+      'action': 'sample',
+      'participant': pid,
+      'group': group,
+      'finger': finger_id,
+      'picture': picture_num,
+    };
     socket.send(JSON.stringify(msg));
   }
 
@@ -257,9 +284,33 @@
 
     // Clean up the input field.
     document.getElementById("fid").value = "";
+    document.getElementById("kickoff_finger").disabled = true;
+
+    // Send finger setup request. We will block this step, by disabling the
+    // OK button, until we get a result back in onKickoffSetupResult.
+    is_kickoff_waiting = true;
+    document.getElementById("kickoff-server-state").textContent =
+      "Waiting for calibration patterns to be captured.";
+    document.getElementById("kickoff-server-state").hidden = false;
+    sendFingerSetupInfo();
 
     switchDiv('fingerid', 'kickoff');
     document.getElementById('kickoff_finger').focus();
+  }
+
+  // Called when we receive the result from the kickoff setup request.
+  // We will either unlock this step or show the error result to the user.
+  function onKickoffSetupResult(result)  {
+    is_kickoff_waiting = false;
+
+    if (result !== "ok") {
+      document.getElementById("kickoff-server-state").textContent = result;
+      return;
+    }
+
+    // Enable the Ok button to allow the study to proceed.
+    document.getElementById("kickoff-server-state").hidden = true;
+    document.getElementById("kickoff_finger").disabled = false;
   }
 
   function show_Progress(result) {
@@ -288,6 +339,11 @@
   }
 
   function do_FingerResult(result) {
+    if (is_kickoff_waiting) {
+      onKickoffSetupResult(result);
+      return;
+    }
+
     if (result === 'ok') {
       picture_num++;
     }
