fpstudy: Fix vertical spacing for all footer status messages
BUG=None
TEST=./host-run.sh
     # Observer ready message at main screen is spaced correctly.
     # Kill host-run while capturing -- trigger connection failure
     # Guess that "error_message" box will probably be correct, too.

Change-Id: I7338ed5df7327ea44b93ec95bc78a9f029ef5c0d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5479873
Commit-Queue: Craig Hesling <hesling@chromium.org>
Tested-by: Craig Hesling <hesling@chromium.org>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>

--- a/biod/study/html/index.html
+++ b/biod/study/html/index.html
@@ -38,7 +38,7 @@
       margin-left:500px;
     }
 
-    #server-state, .progress {
+    .text-footer-status, .progress {
       margin-top:20px;
     }
 
@@ -61,7 +61,7 @@
         Participant group:
         <input type="text" name="grp" id="grp" pattern="[A-Za-z0-9]{1,2}">
       </h1>
-      <div id="server-state" class="text-danger">
+      <div id="server-state" class="text-footer-status text-danger">
         Waiting for the fingerprint scanner to be ready...
       </div>
       <button id="set_participant" disabled>OK</button>
@@ -100,7 +100,7 @@
       <div id="fingerprint-icon">
         <img src="static/fingerprint.svg" height="100" width="100">
       </div>
-      <div id="error" class="text-danger" hidden>
+      <div id="error" class="text-footer-status text-danger" hidden>
         <b><span id="error_message">DEADBEEF</span></b>
       </div>
     </div>
@@ -129,7 +129,7 @@
       <button id="next_finger">OK</button>
     </div>
 
-    <div id="server-error" class="text-danger" hidden>
+    <div id="server-error" class="text-footer-status text-danger" hidden>
       Lost connection to fingerprint scanner. Please reload the page.
     </div>
   </container>
