camera: app: Show FPS counter in web server side panel
BUG=b:343626256
TEST=Run `cca web` and check manually

Change-Id: I134f322b3b57b1458dccfe07436fbbf54ddaa938
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5606105
Tested-by: Shik Chen <shik@chromium.org>
Reviewed-by: Pi-Hsun Shih <pihsun@chromium.org>
Commit-Queue: Shik Chen <shik@chromium.org>

--- a/camera/app/cros_camera_app/web/index.html
+++ b/camera/app/cros_camera_app/web/index.html
@@ -13,6 +13,11 @@
     <script type="module" src="index.js"></script>
   </head>
   <body>
-    <video autoplay></video>
+    <div id="video-container">
+      <video autoplay></video>
+    </div>
+    <div id="side-panel">
+      <div id="fps-counter">FPS: ?</div>
+    </div>
   </body>
 </html>
