camera: app: Show video resolution in web server
BUG=b:343626256
TEST=Run `cca web` and check manually

Change-Id: I13a930c0769967a0edbd1d7be935bd8c27a9dc0b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5607384
Reviewed-by: Pi-Hsun Shih <pihsun@chromium.org>
Tested-by: Shik Chen <shik@chromium.org>
Commit-Queue: Pi-Hsun Shih <pihsun@chromium.org>
Auto-Submit: Shik Chen <shik@chromium.org>

--- a/camera/app/cros_camera_app/web/index.html
+++ b/camera/app/cros_camera_app/web/index.html
@@ -18,6 +18,7 @@
     </div>
     <div id="side-panel">
       <div id="fps-counter">FPS: ?</div>
+      <div id="resolution-stat">Resolution: ?</div>
     </div>
   </body>
 </html>
