camera: app: Add play/pause button in web server
BUG=b:343626256
TEST=Run `cca web` and check manually

Change-Id: Ica123da47411d9d38337849754d5010b478c4e39
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5607386
Auto-Submit: Shik Chen <shik@chromium.org>
Tested-by: Shik Chen <shik@chromium.org>
Commit-Queue: Shik Chen <shik@chromium.org>
Reviewed-by: Pi-Hsun Shih <pihsun@chromium.org>

--- a/camera/app/cros_camera_app/web/index.html
+++ b/camera/app/cros_camera_app/web/index.html
@@ -19,6 +19,7 @@
     <div id="side-panel">
       <div id="fps-counter">FPS: ?</div>
       <div id="resolution-stat">Resolution: ?</div>
+      <button id="play-pause">Pause</button>
     </div>
   </body>
 </html>
