camera: app: Add camera device select dropdown in web server
BUG=b:343626256
TEST=Run `cca web` and check manually

Change-Id: I18c55031383b023ea9d132b9de48a544ca5e44ed
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5604746
Auto-Submit: Shik Chen <shik@chromium.org>
Commit-Queue: Shik Chen <shik@chromium.org>
Tested-by: Shik Chen <shik@chromium.org>
Reviewed-by: Pi-Hsun Shih <pihsun@chromium.org>

--- a/camera/app/cros_camera_app/web/index.html
+++ b/camera/app/cros_camera_app/web/index.html
@@ -19,6 +19,10 @@
     <div id="side-panel">
       <div id="fps-counter">FPS: ?</div>
       <div id="resolution-stat">Resolution: ?</div>
+      <div>
+        Camera:
+        <select id="camera-device"></select>
+      </div>
       <button id="play-pause">Pause</button>
     </div>
   </body>
