camera: app: Expose real-time turbostat info on web server
BUG=b:343626256
TEST=Run `cca web` and check manually

Change-Id: I02c874e9dc156e699789fea8f499d3dff2798dca
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5619795
Commit-Queue: Shik Chen <shik@chromium.org>
Tested-by: Shik Chen <shik@chromium.org>
Reviewed-by: Pi-Hsun Shih <pihsun@chromium.org>

--- a/camera/app/cros_camera_app/web/index.html
+++ b/camera/app/cros_camera_app/web/index.html
@@ -17,8 +17,11 @@
       <video autoplay></video>
     </div>
     <div id="side-panel">
-      <div id="fps-counter">FPS: ?</div>
       <div id="resolution-stat">Resolution: ?</div>
+      <div id="fps-counter">FPS: ?</div>
+      <div class="turbostat" id="pkg-watt">PkgWatt: ?</div>
+      <div class="turbostat" id="cor-watt">CorWatt: ?</div>
+      <div class="turbostat" id="gfx-watt">GFXWatt: ?</div>
       <div>
         Camera:
         <select id="camera-device"></select>
